--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my_npx_card",
-  "version": "1.1.1",
+  "name": "kelsonvictor",
+  "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
   "type": "module",
